force-app/main/default/objects/SpaSpecialApproval__c/SpaSpecialApproval__c.object-meta.xml
<CustomObject>
    <label>SpaSpecialApproval</label>
    <nameField>
        <label>SpaSpecialApproval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SpaSpecialApprovals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>