force-app/main/default/objects/SpaSpecialApproval__c/fields/PM_Whom_Approved__c.field-meta.xml
<CustomField>
    <fullName>PM_Whom_Approved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM Whom Approved</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be a ViewSonic Employee</errorMessage>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>ViewSonic Corporation</value>
        </filterItems>
        <filterItems>
            <field>Contact.Title</field>
            <operation>equals</operation>
            <value>Product Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SpaSpecialApprovals</relationshipLabel>
    <relationshipName>SpaSpecialApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>