force-app/main/default/objects/SpaSpecialApproval__c/fields/SpaName__c.field-meta.xml
<CustomField>
    <fullName>SpaName__c</fullName>
    <label>SpaName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>