force-app/main/default/objects/SpaSpecialApproval__c/fields/SpecialNotes__c.field-meta.xml
<CustomField>
    <fullName>SpecialNotes__c</fullName>
    <label>SpecialNotes</label>
    <length>125000</length>
    <type>LongTextArea</type>
</CustomField>